--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -9,18 +9,17 @@
 
           <div class="form-group">
             <label for="nome">Nome</label>
-            <input
+            <input [(ngModel)]="usuario.nome"
               class="form-control"
               type="text"
               name="nome"
               id="nome"
-              placeholder="Seu nome"
-            />
+              placeholder="Seu nome" />
           </div>
 
           <div class="form-group">
             <label for="usuario">Usuário</label>
-            <input
+            <input [(ngModel)]="usuario.usuario"
               class="form-control"
               type="text"
               name="usuario"
@@ -31,7 +30,7 @@
 
           <div class="form-group">
             <label for="usuario">Link da Foto</label>
-            <input
+            <input [(ngModel)]="usuario.foto"
               class="form-control"
               type="text"
               name="foto"
@@ -42,7 +41,7 @@
 
           <div class="form-group">
             <label for="usuario">Senha</label>
-            <input
+            <input (input)="confirmSenha($event)"
               class="form-control"
               type="password"
               name="senha"
@@ -53,7 +52,7 @@
 
           <div class="form-group">
             <label for="ConfirmSenha">Confirmar Senha</label>
-            <input
+            <input [(ngModel)]="usuario.senha"
               class="form-control"
               type="password"
               name="ConfirmSenha"
@@ -64,7 +63,7 @@
 
           <div class="form-group">
             <label for="tipo">Tipo de Usuário</label>
-            <select class="form-control" name="tipo" id="tipo">
+            <select class="form-control" name="tipo" id="tipo" (change)="tipoUsuario($event)">
               <option>Selecione um tipo de usuário:</option>
               <option value="normal">Normal</option>
               <option value="adm">Administrador</option>
@@ -73,7 +72,7 @@
 
           <div class="d-flex justify-content-center">
             <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-            <button type="submit" class="btn btn-success">Cadastrar</button>
+            <button type="submit" class="btn btn-success" (click)="cadastrar()">Cadastrar</button>
           </div>
         </div>
       </div>
