--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,9 +1,7 @@
 #img-bg {
     background-image: url("https://i.imgur.com/jAZOVhd.jpg");
-
-    min-height: 695px;
-
-    background-position: center;
+    min-height: 100vh;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
 }
