--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -1,12 +1,11 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6" id="img-bg"></div>
-
     <div class="col-md-6 mt-5 mb-5">
       <div class="row d-flex justify-content-center">
         <div class="col-md-10">
           <h1 class="text-center">Cadastro</h1>
-
+          <form>
           <div class="form-group">
             <label for="nome">Nome</label>
             <input [(ngModel)]="usuario.nome"
@@ -67,6 +66,7 @@
               <option>Selecione um tipo de usuário:</option>
               <option value="normal">Normal</option>
               <option value="adm">Administrador</option>
+              <option value="padrao">Padrão</option>
             </select>
           </div>
 
@@ -74,6 +74,8 @@
             <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
             <button type="submit" class="btn btn-success" (click)="cadastrar()">Cadastrar</button>
           </div>
+          </form>
+
         </div>
       </div>
     </div>
