--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -3,30 +3,47 @@
         <div class="col-md-6">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6">
-                    <h1 class="text-center mb-3">
-                        Entrar
-                    </h1>
-                    <div class="form-group">
-                        <label for="usuario">usuario</label>
-                        <input [(ngModel)]="usuarioLogin.usuario" class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuario">
+
+                    <h1 class="text-center mb-3"> Entrar </h1>
+
+                    <form>
+                      <div class="form-group">
+                        <label for="usuario">Usuário</label>
+                        <input
+                        [(ngModel)]="usuarioLogin.usuario"
+                        class="form-control"
+                        type="text"
+                         name="usuario"
+                         id="usuario"
+                         placeholder="Seu usuário">
                     </div>
+
                     <div class="form-group">
-                        <label for="usuario">senha</label>
-                        <input [(ngModel)]="usuarioLogin.senha" class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+                        <label for="usuario">Senha</label>
+                        <input
+                        [(ngModel)]="usuarioLogin.senha"
+                        class="form-control"
+                         type="password"
+                         name="senha"
+                         id="senha"
+                         placeholder="Sua senha">
                     </div>
-                </div>
+
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-success" (click)="entrar()">
-                        Entrar
-                    </button>
-                </div>
+                    <button type="submit" class="btn btn-success" (click)="entrar()"> Entrar </button>
+                  </div>
+                  </form>
 
                     <hr class="mt-5 mb-5">
                     <p class="text-center">
                         Não tem uma conta? <a routerLink="/cadastrar"> Cadastre-se</a>
                     </p>
+
                 </div>
             </div>
+
         </div>
+
             <div class="col-md-6" id="img-bg"></div>
+</div>
 </div>
