--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -73,17 +73,17 @@
              </div>
 
              <div class="form-group">
-              <label for="titulo">Escolha um tema ou  <a href="" > Cadastre um novo</a>: </label>
-              <select name="tema" id="tema" class="form-control">
-                <option value="">Temas</option>
+              <label for="titulo">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
+              <select class="form-control" name="tema" id="tema">
+                  <option value="">Temas</option>
               </select>
-                   </div>
+          </div>
+      </div>
 
-      </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success">Publicar</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-success">Publicar</button>
       </div>
-    </div>
   </div>
+</div>
 </div>
