--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -33,9 +33,30 @@
 
   <nav>
     <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
-      <a class="nav-item nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as Postagens</a>
+      <div class="nav-item nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">
+
+        <div class="card-columns">
+          <div class="card text-center" *ngFor="let item of listaPostagens"></div>
+          <div class="card-body">
+            <h5 class="card-title">{{item.titulo}}</h5>
+            <p class="card-text">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">{item.data}}</small></p>
+
+            <p class="card-text"><small class="text-muted">{item.usuario.nome}}</small></p>]
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
       <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
+
+
       <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab" aria-controls="nav-postagensTema" aria-selected="false">Postagens por Tema</a>
+
+
     </div>
   </nav>
 
@@ -64,25 +85,26 @@
 
        <div class="form-group">
         <label for="titulo">Título</label>
-        <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+        <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título">
        </div>
 
        <div class="form-group">
         <label for="titulo">Texto</label>
-        <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+        <textarea [(ngModel)]="postagem.texto" class="form-control" name="texto" id="texto" rows="3"></textarea>
              </div>
 
              <div class="form-group">
               <label for="titulo">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
-              <select class="form-control" name="tema" id="tema">
-                  <option value="">Temas</option>
+              <select class="form-control" name="tema" id="tema" [(ngModel)]="idTema" (change)="findByIdTema()">
+                  <option *ngFor="let item of listaTemas" value="{{item.id}}">
+                    {{item.descricao}}</option>
               </select>
           </div>
       </div>
 
       <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-success">Publicar</button>
+          <button type="button" class="btn btn-success" (click)="publicar" data-dismiss="modal">Publicar</button>
       </div>
   </div>
 </div>
